Add 'Lato' font-family to body styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 /* Asterick wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
-    margin:0 ;
+    margin: 0;
     box-sizing: border-box;
 }
+
+/* Google Font Import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 /* General styles */
 body {
@@ -13,6 +16,7 @@ body {
 
     /* Generic project styles */
     color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 
 /* Header */
@@ -23,7 +27,7 @@ header {
 /* Main content */
 main {
     background-color: lightblue;
-    /* Make main element take up any surplus space to push footer down… */
+    /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
 }
 
