--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
-/* Asterick wildcard selector to override default styles added by the browser */
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
-/* Google Font Import */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 /* General styles */
 body {
@@ -18,13 +18,13 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 /* Header */
 header {
     background-color: lightcoral;
-}
-
-h1 {
-    font-family: 'Oswald', sans-serif;
 }
 
 /* Main content */
