--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,8 +95,8 @@ main {
 #hero {
     height: 600px;
     width: 100%;
-    background-color: lightgreen;
-}
+    background: url(../images/hero-image.webp) no-repeat    center  center/cover;
+    }
 
 /* Footer */
 #social-networks {
