--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1 {
+h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -96,7 +96,23 @@ main {
     height: 600px;
     width: 100%;
     background: url(../images/hero-image.webp) no-repeat    center  center/cover;
-    }
+    position: relative;
+}
+
+#cover-text {
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+}
 
 /* Footer */
 #social-networks {
@@ -147,6 +163,12 @@ main {
     main {
         /* Push main content down to accmmodate larger header */
         margin-top: 79px;
+    }
+
+    /* Hero */
+    #cover-text {
+        width: 300px;
+        right: 50px
     }
 }
 
