--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,34 @@ main {
     color: #ffffff;
 }
 
+/* Reasons section */
+#reasons {
+    width: 90%;
+    margin: 20px auto 20px auto;
+}
+
+#reasons > h2 {
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+    /* Style for physical and mental inside benefit */
+    #benfits p {
+        padding: 0 20px;
+    }
+
+    #benefits-physical > div, #benefits-mental > div {
+        line-height: 20px;
+        margin-bottom: 20px;
+    }
+
+    #benefits-physical > hr, #benefits-mental > hr {
+        border-top: 1px solid #3a3a3a;
+        margin: 5px 0;
+    }
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -180,3 +208,4 @@ main {
         border-bottom: 1px solid #3a3a3a;
     }
 }
+
