--- a/assets/css/style test.css
+++ b/assets/css/style test.css
@@ -18,9 +18,7 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -65,15 +63,16 @@ nav {
     background-color: #ffffff;
     width: 100%;
     left: 0;
+    top: 20px;
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
-    top: 100%;
+    top: 100%
 }
 
 /* Nav toggle */
 #nav-toggle:checked~nav {
-    display: block;
+    display: block
 }
 
 #nav-toggle {
@@ -86,6 +85,7 @@ nav {
 
 /* Main content */
 main {
+    
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
@@ -95,12 +95,11 @@ main {
 #hero {
     height: 600px;
     width: 100%;
-    background: url("../images/hero-image.webp") no-repeat center center/cover;
+    background: url(../images/hero-image.webp) no-repeat    center  center/cover;
     position: relative;
 }
 
 #cover-text {
-    /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
     position: absolute;
@@ -111,54 +110,56 @@ main {
     padding-left: 10px;
 }
 
-#cover-text>h2,
-#cover-text>h3 {
+#cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
 
 /* Reasons section */
 #reasons {
     width: 90%;
-    margin: 20px auto;
+    margin: 20px auto 20px auto;
 }
 
-#reasons h2 {
+#reasons > h2 {
+    text-transform: uppercase;
     margin-bottom: 20px;
     text-align: center;
     font-size: 280%;
 }
 
-#benefits-physical>div,
-#benefits-mental>div {
-    line-height: 20px;
-    margin-bottom: 20px;
-}
+    /* Style for physical and mental inside benefit */
+    #benfits p {
+        padding: 0 20px;
+    }
 
-#benefits p {
-    padding: 0 20px;
-}
+    #benefits-physical > div, #benefits-mental > div {
+        line-height: 20px;
+        margin-bottom: 20px;
+    }
 
-#benefits hr {
-    border-top: 1px solid #3a3a3a;
-    margin: 5px 0;
-}
+    #benefits-physical > hr, #benefits-mental > hr {
+        border-top: 1px solid #3a3a3a;
+        margin: 5px 0;
+    }
 
-#circle-cover-bg {
-    background: url('../images/reasons-image.webp') no-repeat top center / cover;
-    height: 90vw;
-    width: 90vw;
-    margin-bottom: 20px;
-    /* Makes the square image into a circle */
-    border-radius: 50%;
-    max-width: 300px;
-    max-height: 300px;
-}
+    /* circle-cover section */
+    #circle-cover-bg {
+        background: url('../images/reasons-image.webp') no-repeat top center / cover;
+        height: 90vw;
+        width: 90vw;
+        margin-bottom: 20px;
+        text-align: center;
+        /* Makes the square image into a circle */
+        border-radius: 50%;
+        max-width: 300px;
+        max-height: 300px;
+    }
 
-#benefits-image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    #benefits-image {
+        display: flex;  
+        align-items: center;
+        justify-content: center;
+    }
 
 /* Footer */
 #social-networks {
@@ -172,7 +173,7 @@ main {
 #social-networks i {
     font-size: 160%;
     padding: 5%;
-    color: #3a3a3a;
+    color:  #3a3a3a;
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -207,43 +208,46 @@ main {
 
     /* Main content */
     main {
-        /* Push main content down to accommodate larger header */
+        /* Push main content down to accmmodate larger header */
         margin-top: 79px;
     }
 
     /* Hero */
     #cover-text {
         width: 300px;
-        right: 50px;
+        right: 50px
     }
 
-    /* Reasons section */
+    /* Reasons scetion */
     #benefits-physical,
     #benefits-mental {
-        display: flex;
+        display: flex ;
         flex-direction: column;
         width: 100%;
     }
 
-    #benefits-physical>div,
-    #benefits-mental>div {
+    #benefits-physical > div,
+    #benefits-mental  > div {
         width: 75%;
     }
 
-    #benefits-mental>div {
+    #benefits-mental  > div {
         text-align: end;
         align-self: flex-end;
     }
 
 }
 
-/* Large devices (laptops and desktops, 992px and up) */
+/* Media query: tablets and larger (992px and up) */
 @media screen and (min-width: 992px) {
+
+    /* When mouse hovered to the nav subject will be underlined */
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
 }
 
+/* Media query: laptop and larger (1200px and up) */
 @media screen and (min-width: 1200px) {    
     /* Reasons section */
     #benefits {
