--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,10 +346,30 @@ main {
     }
 
     /* Signup Page */
-    #signup{
+    #signup {
         background-position: center;
         position: relative;
+        padding-top: 150px;
+        padding-left: 10%;
     }
+
+    #signup-form {
+        position: absolute;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .text-input:active {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
+
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
